# array-io-keychain

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  README_new.md  Readme.md  create_dir.sh  keychain_installer.sln
app/linux/passentry/: CMakeLists.txt  main.cpp
keychain_cmd_app/: CMakeLists.txt  MyDialog.m  cmd_parser.cpp  cmd_parser.hpp  gui_mod.cpp  gui_mod.hpp  main.cpp  pass_entry_term.cpp  pass_entry_term.hpp  sec_mod.cpp  sec_mod.hpp  sec_mod_linux.cpp  sec_mod_linux.hpp  sec_mod_mac.hpp  sec_mod_mac.mm  secure_module_dummy.cpp  secure_module_dummy.hpp
keychain_cmd_app/secmodlib/: CMakeLists.txt
keychain_cmd_app/secmodlib/src/: NamedPipeServer.cpp  SecureModuleWrapper.cpp  SecurityManager.cpp  agent.cpp
keychain_gui/: CMakeLists.txt  TabContent.qml  main.cpp  main.qml  qml.qrc
keychain_keymanager/: CMakeLists.txt
keychain_keymanager/Resources/: keychain_keymanager.qrc
keychain_keymanager/include/: custom_menu.hpp  custom_qlabel.hpp  export_dialog.hpp  hints_toolbar.hpp  key_table_row.hpp  keychain_table.hpp  keylist.hpp  keylist_row_model.hpp  keymanager_dialog.hpp  keys_table_view.hpp  menu_button.hpp  menu_toolbar.hpp  more_button.hpp  more_details.hpp  remove_dialog.hpp  table_header.hpp
keychain_keymanager/src/: custom_menu.cpp  custom_qlabel.cpp  export_dialog.cpp  hints_toolbar.cpp  key_scroll_area.cpp  key_table_row.cpp  keychain_table.cpp  keylist.cpp  keymanager_dialog.cpp  keys_table_view.cpp  main.cpp  menu_button.cpp  menu_toolbar.cpp  more_button.cpp  more_details.cpp  remove_dialog.cpp  table_header.cpp
keychain_lib/: CMakeLists.txt
keychain_lib/include/keychain_lib/: bitcoin_transaction.hpp  eth_types_conversion.hpp  export_import.hpp  git_revision.hpp  key_encryptor.hpp  key_file_parser.hpp  keychain.hpp  keychain_commands.hpp  keychain_logger.hpp  keychain_wrapper.hpp  keydata_singleton.cpp  keydata_singleton.hpp  keyfile_parser.hpp  keyfile_singleton.hpp  logger.hpp  mod_singleton.hpp  pipeline_parser.hpp  private_keymap.hpp  sec_mod_protocol.hpp  sec_mod_protocol.hpp~  secmod_parser_cmd.hpp  secmod_protocol.hpp  secure_module_singleton.hpp  secure_module_singletone.hpp  sig.cpp  sig.h  sig.hpp  sign_define.hpp  sql_singleton.hpp  version_info.hpp  wordlist.hpp
keychain_lib/src/: bitcoin_transaction.cpp  eth_types_conversion.cpp  export_import.cpp  git_revision.cpp.in  key_encryptor.cpp  keychain.cpp  keychain_commands.cpp  keychain_logger.cpp  keychain_wrapper.cpp  keydata_singleton.cpp  keyfile_parser.cpp  keyfile_singleton.cpp  logger.cpp  pipeline_parser.cpp  private_keymap.cpp  secmod_parser_cmd.cpp  secmod_protocol.cpp  sql_singleton.cpp  version_info.cpp
keychain_linux/passentry_gui/: CMakeLists.txt  cmd.cpp  cmd.hpp  controller.cpp  controller.hpp  main.cpp  polling.cpp  polling.hpp  widget.cpp  widget.hpp
keychain_linux/passentry_gui/Resources/: keychain_gui_win.qrc
keychain_linux/passentry_gui/include/: BitcoinWidget.h  CheckPasswordStrength.h  EthereumSwapWidget.h  EthereumWidget.h  ExpertModeDialog.h  ExpertModeElement.h  ExpertModeLabel.h  KeychainServiceExchange.h  KeychainWidget.h  PasswordEnterElement.h  PasswordLineEdit.h  PopupWindow.h  RawHashWidget.h  Transaction.h  TransactionParameter.h  UnlockKeyWidget.h  UnparsedTransactionWidget.h  cmd.hpp  keychain_gui_win.h  password_strength.h  polling.hpp  widget.hpp  widget_singleton.h
keychain_linux/passentry_gui/qml/: DropDownButton.qml  RawTxContent.qml  main.qml  qml.qrc
keychain_linux/passentry_gui/src/: BitcoinWidget.cpp  CheckPasswordStrength.cpp  EthereumSwapWidget.cpp  EthereumWidget.cpp  ExpertModeDialog.cpp  ExpertModeElement.cpp  KeychainServiceExchange.cpp  PasswordEnterElement.cpp  PasswordLineEdit.cpp  PopupWindow.cpp  PrivateKeyInMemoryWidget.cpp  RawHashWidget.cpp  Transaction.cpp  TransactionParameter.cpp  UnlockKeyWidget.cpp  UnparsedTransactionWidget.cpp  cmd.cpp  keychain_gui_win.cpp  main.cpp  main.cpp_  polling.cpp  widget.cpp  widget.cpp_  widget_singleton.cpp
keychain_service_win/: CMakeLists.txt
keychain_service_win/include/: Agent.h  KeychainService.h  Logger.h  NamedPipeServer.h  SecureModuleWrapper.h  SecurityManager.h  ServiceLogger.h  ThreadPool.h
keychain_service_win/installer/: license.rtf  make_installer.bat
keychain_service_win/pass_ent_app/: CMakeLists.txt
keychain_service_win/pass_ent_app/src/: KeychainServiceExchange.cpp  pass_ent_app.cpp
keychain_service_win/service_installer/: CMakeLists.txt  delete_service.bat  make_installer.bat  wix_app_entry.wxs
keychain_service_win/service_installer/wsserverinstaller/: CMakeLists.txt  delete_wsservice.bat  servicewrapper.xml  wix_wssapp_entry.wxs  wsservice_manager.bat
keychain_service_win/src/: Agent.cpp  KeychainService.cpp  KeychainServiceMain.cpp  NamedPipeServer.cpp  SecureModuleWrapper.cpp  SecurityManager.cpp  ServiceLogger.cpp
keychain_win/keychain_agent/: CMakeLists.txt
keychain_win/keychain_agent/src/: agent.cpp
keychain_win/keychain_gui/: CMakeLists.txt  pass_ent_app.rc  resource.h
keychain_win/keychain_gui/Resources/: keychain_gui_win.qrc
keychain_win/keychain_gui/include/: BitcoinWidget.h  CheckPasswordStrength.cpp  CheckPasswordStrength.h  EthereumSwapWidget.h  EthereumWidget.h  EventsHandlerSingleton.h  EventsHandlers.h  ExpertModeDialog.h  ExpertModeElement.h  KeychainServiceExchange.h  KeychainWarningMessage.h  KeychainWidget.h  LabelsFactory.h  LockIcon.h  PasswordEnterElement.h  PasswordLineEdit.h  PopupWindow.h  Transaction.h  (+6 more)
keychain_win/keychain_service/: CMakeLists.txt
keychain_win/ws_service_installer/: CMakeLists.txt  CustomInstallDirDlg.wxs  CustomMaintenanceTypeDlg.wxs  CustomVerifyReadyDlg.wxs  CustomVersionDlg.wxs  CustomWixUI_Mondo.wxs  check_service.bat  license.rtf  wix_wssapp_entry.wxs
libraries/: CMakeLists.txt
libraries/ethereum/: CMakeLists.txt
libraries/fc_light/: CMakeLists.txt
libraries/mSIGNA/: CMakeLists.txt  hdkeys.cpp  secp256k1_openssl.cpp
libraries/secp256k1/: CMakeLists.txt
libraries/secp256k1_ext/: CMakeLists.txt  secp256k1_ext.cpp
libraries/sqlite/: config.h  fts5parse.c  parse.c
(+630 files in other folders)
